@@ -11,3 +11,4 @@ depends:
 xml:
     opportunity.xml
     party.xml
+    configuration.xml
