@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/field[@name='sale_sequence']" position="after">
+        <label name="sale_opportunity_sequence"/>
+        <field name="sale_opportunity_sequence"/>
+    </xpath>
+</data>
