@@ -2,6 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree string="Sales Leads/Opportunities">
+    <field name="reference"/>
     <field name="start_date"/>
     <field name="end_date"/>
     <field name="description"/>
